<resources>
    <string name="app_name">Program Movies</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="judul_film">Judul Film</string>
    <string name="nama">Nama</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="nama_login">nama</string>
    <string name="password_login">password</string>
    <string name="sign_in">Sign in</string>
</resources>