<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/etNamaL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_login"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPaswL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNamaL"
        android:layout_marginTop="16dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSignL"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:layout_centerInParent="true"
        android:layout_below="@id/etPaswL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>