<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProfileFragment">

    <TextView
        android:textSize="40sp"
        android:id="@+id/tvProfil"
        android:gravity="center"
        android:text="@string/profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNamaP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProfil"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/nama" />
    <Button
        android:id="@+id/btnLogoutP"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>